made unused folder for collated

--- a/collated/main/A0141872E.md
+++ b/collated/main/A0141872E.md
@@ -1,5 +1,5 @@
 # A0141872E
-###### \java\seedu\taskit\commons\events\ui\MenuBarPanelSelectionChangedEvent.java
+###### /java/seedu/taskit/commons/events/ui/MenuBarPanelSelectionChangedEvent.java
 ``` java
 /**
 * Represents a selection change in the Menu Bar Panel
@@ -23,7 +23,7 @@ public class MenuBarPanelSelectionChangedEvent extends BaseEvent {
 
 }
 ```
-###### \java\seedu\taskit\logic\commands\EditCommand.java
+###### /java/seedu/taskit/logic/commands/EditCommand.java
 ``` java
 /**
  * Edits an existing task in TaskIt.
@@ -186,7 +186,7 @@ public class EditCommand extends Command {
     }
 
 ```
-###### \java\seedu\taskit\logic\commands\ListCommand.java
+###### /java/seedu/taskit/logic/commands/ListCommand.java
 ``` java
 /**
  * Lists all tasks in TaskIt to the user based on given parameters.
@@ -240,7 +240,7 @@ public class ListCommand extends Command {
 
 
 ```
-###### \java\seedu\taskit\logic\commands\MarkCommand.java
+###### /java/seedu/taskit/logic/commands/MarkCommand.java
 ``` java
 /**
  * Mark a existing tasks done or undone in TaskIt based on index.
@@ -289,7 +289,7 @@ public class MarkCommand extends Command {
     }
 }
 ```
-###### \java\seedu\taskit\logic\parser\EditCommandParser.java
+###### /java/seedu/taskit/logic/parser/EditCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new EditCommand object
@@ -347,7 +347,7 @@ public class EditCommandParser {
 
 }
 ```
-###### \java\seedu\taskit\logic\parser\ListCommandParser.java
+###### /java/seedu/taskit/logic/parser/ListCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new ListCommand object
@@ -383,7 +383,7 @@ public class ListCommandParser {
     }
 }
 ```
-###### \java\seedu\taskit\logic\parser\MarkCommandParser.java
+###### /java/seedu/taskit/logic/parser/MarkCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new MarkCommand object
@@ -416,7 +416,7 @@ public class MarkCommandParser {
     }
 }
 ```
-###### \java\seedu\taskit\logic\parser\ParserUtil.java
+###### /java/seedu/taskit/logic/parser/ParserUtil.java
 ``` java
     /**
      * Returns the specified parameter in the {@code parameter} if it only contains alphanumeric
@@ -430,7 +430,7 @@ public class MarkCommandParser {
         return Optional.of(parameter);
 
 ```
-###### \java\seedu\taskit\model\ModelManager.java
+###### /java/seedu/taskit/model/ModelManager.java
 ``` java
     public void updateTask(int filteredTaskListIndex, ReadOnlyTask editedTask)
             throws UniqueTaskList.DuplicateTaskException {
@@ -445,7 +445,7 @@ public class MarkCommandParser {
         taskManager.markTask(taskToMark, parameter);
         indicateAddressBookChanged();
 ```
-###### \java\seedu\taskit\model\ModelManager.java
+###### /java/seedu/taskit/model/ModelManager.java
 ``` java
     @Override
     public void updateFilteredTaskList(Set<String> keywords) {
@@ -462,7 +462,7 @@ public class MarkCommandParser {
         return filteredTasks.size();
     }
 ```
-###### \java\seedu\taskit\model\ModelManager.java
+###### /java/seedu/taskit/model/ModelManager.java
 ``` java
     private class ParameterQualifier implements Qualifier {
         private String parameter;
@@ -511,7 +511,7 @@ public class MarkCommandParser {
         }
 
 ```
-###### \java\seedu\taskit\model\task\Date.java
+###### /java/seedu/taskit/model/task/Date.java
 ``` java
     public boolean isEndTimePassCurrentTime() {
         java.util.Date currentDate = new java.util.Date();
@@ -528,7 +528,7 @@ public class MarkCommandParser {
         }
         return false;
 ```
-###### \java\seedu\taskit\model\task\Task.java
+###### /java/seedu/taskit/model/task/Task.java
 ``` java
     @Override
     public boolean isDone() {
@@ -573,7 +573,7 @@ public class MarkCommandParser {
     }
 }
 ```
-###### \java\seedu\taskit\model\task\UniqueTaskList.java
+###### /java/seedu/taskit/model/task/UniqueTaskList.java
 ``` java
     /**
      * Mark the task in the list {@code taskToMark} with {@code parameter}.
@@ -597,7 +597,7 @@ public class MarkCommandParser {
         internalList.set(index, targetTask);
         sortTasks();
 ```
-###### \java\seedu\taskit\model\TaskManager.java
+###### /java/seedu/taskit/model/TaskManager.java
 ``` java
     /**
      * Mark the task in the list {@code taskToMark} with {@code parameter}.
@@ -609,7 +609,7 @@ public class MarkCommandParser {
             throws UniqueTaskList.DuplicateMarkingException {
         tasks.markTask(taskToMark, parameter);
 ```
-###### \java\seedu\taskit\ui\CommandBox.java
+###### /java/seedu/taskit/ui/CommandBox.java
 ``` java
     /**
      * display the relevant task lists based on the MenuBarSelectionChanged Event parameter
@@ -656,7 +656,7 @@ public class MarkCommandParser {
 
 }
 ```
-###### \java\seedu\taskit\ui\MainWindow.java
+###### /java/seedu/taskit/ui/MainWindow.java
 ``` java
     void fillInnerParts() {
         taskListPanel = new TaskListPanel(getTaskListPlaceholder(), logic.getFilteredTaskList());
@@ -665,7 +665,7 @@ public class MarkCommandParser {
         commandBox = new CommandBox(getCommandBoxPlaceholder(), logic);
         menuBarPanel = new MenuBarPanel(getMenuBarPlaceholder());
 ```
-###### \java\seedu\taskit\ui\MainWindow.java
+###### /java/seedu/taskit/ui/MainWindow.java
 ``` java
     public MenuBarPanel getMenuBarPanel() {
         return this.menuBarPanel;
@@ -676,7 +676,7 @@ public class MarkCommandParser {
     }
 }
 ```
-###### \java\seedu\taskit\ui\MenuBarCard.java
+###### /java/seedu/taskit/ui/MenuBarCard.java
 ``` java
 /**
  * MenuBarCard defines format for individual menu bar item.
@@ -700,7 +700,7 @@ public class MenuBarCard extends UiPart<Region> {
 
 }
 ```
-###### \java\seedu\taskit\ui\MenuBarPanel.java
+###### /java/seedu/taskit/ui/MenuBarPanel.java
 ``` java
 public class MenuBarPanel extends UiPart<Region> {
     private final Logger logger = LogsCenter.getLogger(MenuBarPanel.class);
@@ -772,7 +772,7 @@ public class MenuBarPanel extends UiPart<Region> {
 
 }
 ```
-###### \java\seedu\taskit\ui\UiManager.java
+###### /java/seedu/taskit/ui/UiManager.java
 ``` java
     @Subscribe
     private void handleMenuBarPanelSelectionChangedEvent(MenuBarPanelSelectionChangedEvent event) {
@@ -781,7 +781,7 @@ public class MenuBarPanel extends UiPart<Region> {
     }
 }
 ```
-###### \resources\view\Extensions.css
+###### /resources/view/Extensions.css
 ``` css
 
 /* Styles for menuBarView*/
@@ -815,7 +815,7 @@ public class MenuBarPanel extends UiPart<Region> {
     -fx-border-color: #c9c9c9;
 }
 ```
-###### \resources\view\MainWindow.fxml
+###### /resources/view/MainWindow.fxml
 ``` fxml
 
 <VBox prefHeight="870.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
@@ -872,7 +872,7 @@ public class MenuBarPanel extends UiPart<Region> {
    </children>
 </VBox>
 ```
-###### \resources\view\MenuBarCard.fxml
+###### /resources/view/MenuBarCard.fxml
 ``` fxml
 
 <HBox id="menuBarCardPane" fx:id="menuBarCardPane" prefHeight="63.0" prefWidth="130.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
@@ -908,7 +908,7 @@ public class MenuBarPanel extends UiPart<Region> {
     </children>
 </HBox>
 ```
-###### \resources\view\MenuBarPanel.fxml
+###### /resources/view/MenuBarPanel.fxml
 ``` fxml
 
 <?import java.net.URL?>
