--- a/collated/test/A0141011J.md
+++ b/collated/test/A0141011J.md
@@ -1,5 +1,33 @@
 # A0141011J
-###### \java\guitests\DeleteCommandTest.java
+###### /java/guitests/ClearCommandTest.java
+``` java
+    @Test
+    public void clear() {
+
+        //verify a non-empty list can be cleared
+        TestTask[] expectedTasks = td.getTypicalTasks();
+        Arrays.sort(expectedTasks);
+        assertTrue(taskListPanel.isListMatching(expectedTasks));
+        assertClearCommandSuccess();
+
+        //verify other commands can work after a clear command
+        commandBox.runCommand(td.lunch.getAddCommand());
+        assertTrue(taskListPanel.isListMatching(td.lunch));
+        commandBox.runCommand("delete 1");
+        assertListSize(0);
+
+        //verify clear command works when the list is empty
+        assertClearCommandSuccess();
+    }
+
+    private void assertClearCommandSuccess() {
+        commandBox.runCommand("clear");
+        assertListSize(0);
+        assertResultMessage("Tasks have been cleared!");
+    }
+}
+```
+###### /java/guitests/DeleteCommandTest.java
 ``` java
 import static org.junit.Assert.assertTrue;
 import static seedu.taskit.logic.commands.DeleteCommand.MESSAGE_DELETE_TASK_SUCCESS;
@@ -60,7 +88,7 @@ public class DeleteCommandTest extends TaskManagerGuiTest {
 
 }
 ```
-###### \java\guitests\SelectCommandTest.java
+###### /java/guitests/SelectCommandTest.java
 ``` java
 public class SelectCommandTest extends TaskManagerGuiTest {
 
@@ -130,7 +158,7 @@ public class SelectCommandTest extends TaskManagerGuiTest {
 
 }
 ```
-###### \java\guitests\UndoCommandTest.java
+###### /java/guitests/UndoCommandTest.java
 ``` java
 public class UndoCommandTest extends TaskManagerGuiTest{
 
@@ -235,7 +263,7 @@ public class UndoCommandTest extends TaskManagerGuiTest{
     }
 }
 ```
-###### \java\seedu\taskit\testutil\TaskBuilder.java
+###### /java/seedu/taskit/testutil/TaskBuilder.java
 ``` java
     private TestTask task;
 
@@ -256,7 +284,7 @@ public class UndoCommandTest extends TaskManagerGuiTest{
     }
 
 ```
-###### \java\seedu\taskit\testutil\TaskBuilder.java
+###### /java/seedu/taskit/testutil/TaskBuilder.java
 ``` java
 
     public TaskBuilder withTags(String ... tags) throws IllegalValueException {
