Collate siwei and ziyang's codes

--- a/collated/main/A0147622H.md
+++ b/collated/main/A0147622H.md
@@ -1,5 +1,32 @@
 # A0147622H
-###### /java/seedu/geekeep/logic/commands/RedoCommand.java
+###### \java\seedu\geekeep\commons\events\model\GeekeepFilePathChangedEvent.java
+``` java
+package seedu.geekeep.commons.events.model;
+
+import seedu.geekeep.commons.events.BaseEvent;
+import seedu.geekeep.model.Config;
+import seedu.geekeep.model.ReadOnlyGeeKeep;
+
+/** Indicates the GeeKeep in the model has changed*/
+public class GeekeepFilePathChangedEvent extends BaseEvent {
+
+    public final Config config;
+    public final ReadOnlyGeeKeep geekeep;
+
+    public GeekeepFilePathChangedEvent(Config config, ReadOnlyGeeKeep geekeep) {
+        this.config = config;
+        this.geekeep = geekeep;
+    }
+
+    @Override
+    public String toString() {
+        return "GeeKeep file path = " + config.getGeekeepFilePath() + "\nnumber of tasks "
+                + geekeep.getTaskList().size()
+                + ", number of tags " + geekeep.getTagList().size();
+    }
+}
+```
+###### \java\seedu\geekeep\logic\commands\RedoCommand.java
 ``` java
 package seedu.geekeep.logic.commands;
 
@@ -27,7 +54,24 @@ public class RedoCommand extends Command {
     }
 }
 ```
-###### /java/seedu/geekeep/logic/commands/UndoCommand.java
+###### \java\seedu\geekeep\logic\commands\UndoableCommand.java
+``` java
+package seedu.geekeep.logic.commands;
+
+/**
+ * Represents an undoable command with hidden internal logic and the ability to be executed.
+ */
+public abstract class UndoableCommand extends Command {
+
+    @Override
+    public void updateCommandHistory() {
+        super.updateCommandHistory();
+        model.updateUndoableCommandHistory(commandText);
+    }
+
+}
+```
+###### \java\seedu\geekeep\logic\commands\UndoCommand.java
 ``` java
 package seedu.geekeep.logic.commands;
 
@@ -55,7 +99,26 @@ public class UndoCommand extends Command {
     }
 }
 ```
-###### /java/seedu/geekeep/logic/parser/Parser.java
+###### \java\seedu\geekeep\logic\Logic.java
+``` java
+    /** Returns command history */
+    List<String> getCommandHistory();
+}
+```
+###### \java\seedu\geekeep\logic\LogicManager.java
+``` java
+    @Override
+    public void setFilteredTaskListToShowUndone() {
+        model.updateFilteredTaskListToShowUndone();
+    }
+
+    @Override
+    public List<String> getCommandHistory() {
+        return model.getCommandHistory();
+    }
+}
+```
+###### \java\seedu\geekeep\logic\parser\Parser.java
 ``` java
         case UndoCommand.COMMAND_WORD:
             return new UndoCommand();
@@ -64,7 +127,7 @@ public class UndoCommand extends Command {
             return new RedoCommand();
 
 ```
-###### /java/seedu/geekeep/model/Model.java
+###### \java\seedu\geekeep\model\Model.java
 ``` java
     String undo() throws NothingToUndoException;
 
@@ -79,7 +142,7 @@ public class UndoCommand extends Command {
     void setGeekeepFilePath(String filePath);
 
 ```
-###### /java/seedu/geekeep/model/ModelManager.java
+###### \java\seedu\geekeep\model\ModelManager.java
 ``` java
     private final Stack<ReadOnlyGeeKeep> pastGeeKeeps;
     private final Stack<ReadOnlyGeeKeep> futureGeeKeeps;
@@ -119,7 +182,7 @@ public class UndoCommand extends Command {
     }
 
 ```
-###### /java/seedu/geekeep/model/ModelManager.java
+###### \java\seedu\geekeep\model\ModelManager.java
 ``` java
     @Override
     public String undo() throws NothingToUndoException {
@@ -211,7 +274,153 @@ public class UndoCommand extends Command {
     }
 
 ```
-###### /java/seedu/geekeep/storage/XmlAdaptedTask.java
+###### \java\seedu\geekeep\storage\ConfigStorage.java
+``` java
+package seedu.geekeep.storage;
+
+import java.io.IOException;
+import java.util.Optional;
+
+import seedu.geekeep.commons.exceptions.DataConversionException;
+import seedu.geekeep.model.Config;
+
+/**
+ * Represents a storage for {@link seedu.geekeep.model.Config}.
+ */
+public interface ConfigStorage {
+
+    /**
+     * Returns Config data from storage.
+     *   Returns {@code Optional.empty()} if storage file is not found.
+     * @throws DataConversionException if the data in storage is not in the expected format.
+     */
+    Optional<Config> readConfig() throws DataConversionException;
+
+    /**
+     * Saves the given {@link seedu.geekeep.model.Config} to the storage.
+     * @param config cannot be null.
+     * @throws IOException if there was any problem writing to the file.
+     */
+    void saveConfig(Config config) throws IOException;
+
+}
+```
+###### \java\seedu\geekeep\storage\GeeKeepStorage.java
+``` java
+    /**
+     * Set the file path of the data file.
+     */
+    void setGeeKeepFilePath(String filePath);
+
+```
+###### \java\seedu\geekeep\storage\JsonConfigStorage.java
+``` java
+package seedu.geekeep.storage;
+
+import java.io.IOException;
+import java.util.Optional;
+
+import seedu.geekeep.commons.exceptions.DataConversionException;
+import seedu.geekeep.commons.util.JsonUtil;
+import seedu.geekeep.model.Config;
+
+/**
+ * A class to access Config stored in the hard disk as a json file
+ */
+public class JsonConfigStorage implements ConfigStorage {
+
+    private String filePath;
+
+    public JsonConfigStorage(String filePath) {
+        this.filePath = filePath;
+    }
+
+    @Override
+    public Optional<Config> readConfig() throws DataConversionException {
+        return readConfig(filePath);
+    }
+
+    /**
+     * Similar to {@link #readConfig()}
+     * @param prefsFilePath location of the data. Cannot be null.
+     * @throws DataConversionException if the file format is not as expected.
+     */
+    public Optional<Config> readConfig(String prefsFilePath) throws DataConversionException {
+        return JsonUtil.readJsonFile(prefsFilePath, Config.class);
+    }
+
+    @Override
+    public void saveConfig(Config config) throws IOException {
+        JsonUtil.saveJsonFile(config, filePath);
+    }
+
+}
+```
+###### \java\seedu\geekeep\storage\Storage.java
+``` java
+    @Override
+    Optional<Config> readConfig() throws DataConversionException;
+
+    @Override
+    void saveConfig(Config config) throws IOException;
+
+```
+###### \java\seedu\geekeep\storage\Storage.java
+``` java
+    @Override
+    void setGeeKeepFilePath(String filePath);
+
+```
+###### \java\seedu\geekeep\storage\Storage.java
+``` java
+    void handleGeekeepFilePathChangedEvent(GeekeepFilePathChangedEvent event) throws IOException;
+}
+```
+###### \java\seedu\geekeep\storage\StorageManager.java
+``` java
+    // ================ Config methods ==============================
+
+    @Override
+    public Optional<Config> readConfig() throws DataConversionException {
+        return configStorage.readConfig();
+    }
+
+    @Override
+    public void saveConfig(Config config) throws IOException {
+        configStorage.saveConfig(config);
+    }
+
+
+```
+###### \java\seedu\geekeep\storage\StorageManager.java
+``` java
+    @Override
+    public void setGeeKeepFilePath(String filePath) {
+        geeKeepStorage.setGeeKeepFilePath(filePath);
+    }
+
+```
+###### \java\seedu\geekeep\storage\StorageManager.java
+``` java
+    @Override
+    @Subscribe
+    public void handleGeekeepFilePathChangedEvent(GeekeepFilePathChangedEvent event) throws IOException {
+        logger.info(LogsCenter.getEventHandlingLogMessage(event, "GeeKeep file path changed, saving to file"));
+        Config config = event.config;
+        String filePath = config.getGeekeepFilePath();
+        try {
+            FileUtil.createParentDirsOfFile(new File(filePath));
+            Files.move(Paths.get(getGeeKeepFilePath()), Paths.get(filePath), StandardCopyOption.REPLACE_EXISTING);
+            saveConfig(config);
+            setGeeKeepFilePath(filePath);
+        } catch (IOException e) {
+            raise(new DataSavingExceptionEvent(e));
+        }
+    }
+
+}
+```
+###### \java\seedu\geekeep\storage\XmlAdaptedTask.java
 ``` java
 package seedu.geekeep.storage;
 
@@ -298,4 +507,85 @@ public class XmlAdaptedTask {
         return description.isEmpty() ? null : new Description(description);
     }
 }
+```
+###### \java\seedu\geekeep\storage\XmlGeeKeepStorage.java
+``` java
+    @Override
+    public void setGeeKeepFilePath(String filePath) {
+        this.filePath = filePath;
+    }
+
+```
+###### \java\seedu\geekeep\ui\CommandBox.java
+``` java
+    private void addHistoryEventHandler() {
+        commandTextField.addEventFilter(KeyEvent.KEY_PRESSED, event -> {
+            KeyCode keyCode = event.getCode();
+            if (!(keyCode.equals(KeyCode.UP) || keyCode.equals(KeyCode.DOWN))) {
+                if (keyCode.equals(KeyCode.ENTER)) {
+                    currentPrefix = Optional.empty();
+                }
+                return;
+            }
+            String commandText = commandTextField.getText();
+            int caretPosition = commandTextField.getCaretPosition();
+            String prefix = commandText.substring(0, caretPosition);
+            if (!(currentPrefix.equals(Optional.of(prefix))
+                    && matchingCommands.get(matchingCommandIndex).equals(commandText))) {
+                resetMatchingCommands(prefix, commandText);
+            }
+            Optional<String> matchingCommand;
+            if (keyCode.equals(KeyCode.UP)) {
+                matchingCommand = findPreviousMatchingCommand(prefix, commandText);
+            } else {
+                matchingCommand = findNextMatchingCommand(prefix);
+            }
+            if (matchingCommand.isPresent()) {
+                commandTextField.setText(matchingCommand.get());
+                commandTextField.positionCaret(caretPosition);
+            }
+            event.consume();
+        });
+    }
+
+    private void resetMatchingCommands(String prefix, String commandText) {
+        currentPrefix = Optional.of(prefix);
+        commandHistoryIndex = getCommandHistory().size() - 1;
+        matchingCommands.clear();
+        matchingCommands.add(commandText);
+        matchingCommandIndex = 0;
+    }
+
+    private Optional<String> findPreviousMatchingCommand(String prefix, String commandText) {
+        logger.fine("Finding previous command that starts with \"" + prefix + "\"");
+        if (matchingCommandIndex + 1 < matchingCommands.size()) {
+            matchingCommandIndex++;
+            return Optional.of(matchingCommands.get(matchingCommandIndex));
+        }
+        List<String> commandHistory = getCommandHistory();
+        while (commandHistoryIndex >= 0) {
+            String command = commandHistory.get(commandHistoryIndex);
+            commandHistoryIndex--;
+            if (command.startsWith(prefix) && !command.equals(commandText)) {
+                matchingCommands.add(command);
+                matchingCommandIndex++;
+                return Optional.of(command);
+            }
+        }
+        return Optional.empty();
+    }
+
+    private Optional<String> findNextMatchingCommand(String prefix) {
+        logger.fine("Finding next command that starts with \"" + prefix + "\"");
+        if (matchingCommandIndex == 0) {
+            return Optional.empty();
+        }
+        matchingCommandIndex--;
+        return Optional.of(matchingCommands.get(matchingCommandIndex));
+    }
+
+    private List<String> getCommandHistory() {
+        return logic.getCommandHistory();
+    }
+
 ```
