--- a/collated/main/A0148037E.md
+++ b/collated/main/A0148037E.md
@@ -1,12 +1,12 @@
 # A0148037E
-###### /java/seedu/geekeep/commons/core/TaskCategory.java
+###### \java\seedu\geekeep\commons\core\TaskCategory.java
 ``` java
 package seedu.geekeep.commons.core;
 
 public enum TaskCategory {
     ALL,
-    DONE,
-    UNDONE;
+    FINISHED,
+    UPCOMING;
 }
 ```
 ###### /java/seedu/geekeep/commons/events/model/SwitchTaskCategoryEvent.java
