--- a/collated/test/A0147622H.md
+++ b/collated/test/A0147622H.md
@@ -1,5 +1,12 @@
 # A0147622H
-###### /java/guitests/RedoCommandTest.java
+###### \java\guitests\guihandles\CommandBoxHandle.java
+``` java
+    public void type(KeyCode... keyCodes) {
+        guiRobot.type(keyCodes);
+    }
+
+```
+###### \java\guitests\RedoCommandTest.java
 ``` java
 package guitests;
 
@@ -43,7 +50,56 @@ public class RedoCommandTest extends GeeKeepGuiTest {
 
 }
 ```
-###### /java/guitests/UndoCommandTest.java
+###### \java\guitests\RetrieveCommandHistoryTest.java
+``` java
+package guitests;
+
+import static org.junit.Assert.assertEquals;
+
+import org.junit.Test;
+
+import javafx.scene.input.KeyCode;
+
+public class RetrieveCommandHistoryTest extends GeeKeepGuiTest {
+
+    private static final String COMMAND_ADD_LEARN_HASKELL = "add Learn Haskell";
+    private static final String COMMAND_ADD_BUY_SPECTACLES = "add Buy spectacles";
+    private static final String COMMAND_DELETE_1 = "delete 1";
+    private static final String PREFIX = "add";
+
+    @Test
+    public void retrievePreviousHistory() {
+        commandBox.runCommand(COMMAND_ADD_LEARN_HASKELL);
+        commandBox.runCommand(COMMAND_DELETE_1);
+        commandBox.runCommand(COMMAND_ADD_BUY_SPECTACLES);
+        commandBox.enterCommand(PREFIX);
+        commandBox.type(KeyCode.UP);
+        assertEquals(COMMAND_ADD_BUY_SPECTACLES, commandBox.getCommandInput());
+        commandBox.type(KeyCode.UP);
+        assertEquals(COMMAND_ADD_LEARN_HASKELL, commandBox.getCommandInput());
+        commandBox.type(KeyCode.UP);
+        assertEquals(COMMAND_ADD_LEARN_HASKELL, commandBox.getCommandInput());
+    }
+
+    @Test
+    public void retrieveNextHistory() {
+        commandBox.runCommand(COMMAND_ADD_LEARN_HASKELL);
+        commandBox.runCommand(COMMAND_DELETE_1);
+        commandBox.runCommand(COMMAND_ADD_BUY_SPECTACLES);
+        commandBox.enterCommand(PREFIX);
+        commandBox.type(KeyCode.UP);
+        commandBox.type(KeyCode.UP);
+        commandBox.type(KeyCode.DOWN);
+        assertEquals(COMMAND_ADD_BUY_SPECTACLES, commandBox.getCommandInput());
+        commandBox.type(KeyCode.DOWN);
+        assertEquals(PREFIX, commandBox.getCommandInput());
+        commandBox.type(KeyCode.DOWN);
+        assertEquals(PREFIX, commandBox.getCommandInput());
+    }
+
+}
+```
+###### \java\guitests\UndoCommandTest.java
 ``` java
 package guitests;
 
