--- a/collated/test/A0148037E.md
+++ b/collated/test/A0148037E.md
@@ -1,5 +1,18 @@
 # A0148037E
-###### /java/guitests/FindCommandTest.java
+###### \java\guitests\CommandBoxTest.java
+``` java
+    @Test
+    public void commandBox_commandSucceedsAfterMultipleFailedCommands_textClearedAndErrorStyleClassRemoved() {
+        //Multiple failed commands
+        commandBox.runCommand(COMMAND_THAT_FAILS);
+        commandBox.runCommand(COMMAND_THAT_FAILS);
+
+        commandBox.runCommand(COMMAND_THAT_SUCCEEDS);
+        assertEquals("", commandBox.getCommandInput());
+        assertEquals(defaultStyleOfCommandBox, commandBox.getStyleClass());
+    }
+```
+###### \java\guitests\FindCommandTest.java
 ``` java
 package guitests;
 
